overflow:hidden fixed on mobile burger-menu

--- a/src/styles/blocks/header/header.scss
+++ b/src/styles/blocks/header/header.scss
@@ -6,7 +6,6 @@
   box-sizing: border-box;
   display: flex;
   justify-content: center;
-  overflow: hidden;
   width: 100%;
   background-color: $base-background;
 
